feat: stack description

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="stacks-div">
         <h1> Stacks </h1>
         <h2>Last in, first out</h2>
+        <h3>Great to understand js calls stack, function invocation and the undo/redo functionality many programs offer.</h3>
         <input type="text" id="item-stack">
         <button onclick="addToStack()">Add to stack</button>
         <button onclick="removeFromStack()">Remove from stack</button>
